# GMEXT-FMOD

./: .gitignore  README.md  SECURITY.md  metadata.json
.github/ISSUE_TEMPLATE/: extension_bug_report.yml  extension_docs_report.yml  feature-request.yml
docs/: Constants.js  Definitions_Fmod_Core.js  Definitions_Fmod_Core_Codec.js  Definitions_Fmod_Core_DSP.js  Definitions_Fmod_Core_DSP_Effect.js  Definitions_Fmod_Core_Output.js  Definitions_Fmod_Studio.js  Docs.js  Fmod_Channel.js  Fmod_ChannelControl.js  Fmod_ChannelGroup.js  Fmod_Common.js  Fmod_DSP.js  Fmod_DSPConnection.js  Fmod_Geometry.js  Fmod_Reverb3D.js  Fmod_Sound.js  Fmod_SoundGroup.js  Fmod_Studio_Bank.js  Fmod_Studio_Bus.js  Fmod_Studio_CommandReplay.js  Fmod_Studio_Event_Description.js  Fmod_Studio_Event_Instance.js  Fmod_Studio_System.js  Fmod_Studio_VCA.js  Fmod_System.js  GeneralInformation.md  GettingStarted.md  Structs.js  Structs_Fmod.js  _Footer.md  _Sidebar.md  documentation.js
source/fmod_gml/: FMOD.resource_order  FMOD.yyp
source/fmod_gml/datafiles/: GMEXT-FMOD Unix Docs.html  GMEXT-FMOD Win Docs.lnk  GMEXT-FMOD.html  Master.bank  Master.strings.bank
source/fmod_gml/datafiles/fmod_docs/: 404.html  DSP.html  GeneralInformation.html  GettingStarted.html  Home.html  _Footer.html  _Sidebar.html  bank.html  bus.html  channel.html  channel_control.html  channel_group.html  command_replay.html  constants.html  dsp_connection.html  event_description.html  event_instance.html  geometry.html  index.html  misc.html  reverb_3d.html  sound.html  sound_group.html  structs.html  studio_system.html  studio_vca.html  system.html
source/fmod_gml/extensions/FMOD/: FMOD.yy  libYYFMOD.dylib  post_build_step.bat  post_build_step.sh  pre_build_step.bat  pre_build_step.sh  scriptUtils.bat  scriptUtils.sh
source/fmod_gml/extensions/FMOD/fmod_android/: CMakeLists.txt  CMakePresets.json  native-lib.cpp
source/fmod_gml/fonts/fnt_gm_15/: fnt_gm_15.yy
source/fmod_gml/fonts/fnt_gm_20/: fnt_gm_20.yy
source/fmod_gml/fonts/fnt_gm_30/: fnt_gm_30.yy
source/fmod_gml/objects/Obj_Fmod_Convolution_Reverb_Dry_Minus/: Create_0.gml  Mouse_7.gml  obj_fmod_convolution_reverb_dry_minus.yy
source/fmod_gml/objects/Obj_Fmod_Convolution_Reverb_Dry_Plus/: Create_0.gml  Mouse_7.gml  obj_fmod_convolution_reverb_dry_plus.yy
source/fmod_gml/objects/Obj_Fmod_Convolution_Reverb_Wet_Minus/: Create_0.gml  Mouse_7.gml  obj_fmod_convolution_reverb_wet_minus.yy
source/fmod_gml/objects/Obj_Fmod_Convolution_Reverb_Wet_Plus/: Create_0.gml  Mouse_7.gml  obj_fmod_convolution_reverb_wet_plus.yy
source/fmod_gml/objects/Obj_Fmod_DSP_Speaker_Pan_Left/: Create_0.gml  Mouse_7.gml  obj_fmod_dsp_speaker_pan_left.yy
source/fmod_gml/objects/Obj_Fmod_DSP_Speaker_Pan_Right/: Create_0.gml  Mouse_7.gml  obj_fmod_dsp_speaker_pan_right.yy
source/fmod_gml/objects/obj_console_pointer/: Create_0.gml  Draw_0.gml  Step_0.gml  obj_console_pointer.yy
source/fmod_gml/objects/obj_fmod/: Create_0.gml  Step_0.gml  obj_fmod.yy
source/fmod_gml/objects/obj_fmod_3d/: CleanUp_0.gml  Draw_0.gml  (+3 more)
templates/: release_body.md
(+352 files in other folders)
